tests/ui/errors/auto-impl.pattern.ref.stderr
error: `auto_impl` supports only ident of wildcard arguments
 --> tests/ui/errors/auto-impl.pattern.ref.rs:3:13
  |
3 |     fn test(&a: &i32) {
  |             ^
